# Autoencoders

./: .pre-commit-config.yaml  pyproject.toml
naive_autoencoder/: test.py  train.py
naive_autoencoder/data/: download_dataset.py  mel_spectrogram.py  noise_generator.py  processor.py
naive_autoencoder/model/: autoencoder.py  convolutional_autoencoder.py
