[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autoencoders"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.18"
dependencies = [
]


[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-mock",

    "mypy",
    "types-requests",

    "pre-commit",
    "black",
    "isort",
]

[tool.setuptools]
packages = ["naive_autoencoder"]

